horizontal scroll working on upscroll with bugs

--- a/src/components/Gallery/style.scss
+++ b/src/components/Gallery/style.scss
@@ -2,6 +2,8 @@
   background-color: #d53f41;
   margin-left: -5vw;
   margin-right: -5vw;
+  width: auto;
+  height: 700vh;
 }
 
 .gallery-counter {
@@ -93,6 +95,8 @@
       .gallery-item-image {
         transform: scale(1);
         filter: none;
+        height: auto;
+        width: auto;
       }
     }
   }
@@ -103,8 +107,8 @@
     width: 100%;
     height: 100%;
     will-change: transform;
-    // transform: scale(0.7);
+    transform: scale(0.7);
     transition: all 1.5s cubic-bezier(0.77, 0, 0.175, 1);
-    // filter: grayscale(100%) sepia(20%) brightness(80%);
+    filter: grayscale(100%) sepia(20%) brightness(80%);
   }
 }
