--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,12 +3,6 @@ body {
   padding: 0;
 }
 
-.wrapperparent {
-  
-  overflow: auto;
-  
-
-}
 .section {
   /* scroll-snap-align: center; */
   height: 100%;
